Reetan.Nayak Dev 25/force-app/main/default/objects/ChatterJanitorSetting__c/ChatterJanitorSetting__c.object-meta.xml
<CustomObject>
    <label>ChatterJanitorSetting</label>
    <nameField>
        <displayFormat>CJS-{000}</displayFormat>
        <label>Setting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChatterJanitorSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>