Reetan.Nayak Dev 25/force-app/main/default/objects/ChatterJanitorSetting__c/fields/Date_Limit_No_of_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Limit_No_of_Type__c</fullName>
    <label>Delete Posts Older Than</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>