Reetan.Nayak Dev 25/force-app/main/default/objects/ChatterJanitorSetting__c/fields/Date_Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Limit_Type__c</fullName>
    <label>Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day(s)</fullName>
                <default>true</default>
                <label>Day(s)</label>
            </value>
            <value>
                <fullName>Month(s)</fullName>
            </value>
            <value>
                <fullName>Year(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>