Reetan.Nayak Dev 25/force-app/main/default/objects/ChatterJanitorSetting__c/fields/Email_Archival__c.field-meta.xml
<CustomField>
    <fullName>Email_Archival__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Archival</label>
    <type>Checkbox</type>
</CustomField>