Reetan.Nayak Dev 25/force-app/main/default/objects/ChatterJanitorSetting__c/fields/Skip_Tracked_Changes__c.field-meta.xml
<CustomField>
    <fullName>Skip_Tracked_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Tracked Changes</label>
    <type>Checkbox</type>
</CustomField>