Reetan.Nayak Dev 25/force-app/main/default/objects/ChatterJanitorSetting__c/fields/Skip_Written_Posts__c.field-meta.xml
<CustomField>
    <fullName>Skip_Written_Posts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Written Posts</label>
    <type>Checkbox</type>
</CustomField>